# hmmer-py-old

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml  python-publish.yml
hmmer/: __init__.py  _env.py  _example.py  _misc.py  _testit.py  domtbl.py  hmmer.py  misc.py  tbl.py  typing.py
hmmer/test/: test_hmmer.py  test_tables.py
