[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Invisible sequence scanner
download_url = https://github.com/EBI-Metagenomics/hmmer3-py
keywords = hmmer, dna, protein
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = hmmer3
url = https://github.com/EBI-Metagenomics/hmmer3-py
version = attr: version.get

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    pytest-runner>=5.2
install_requires =
    appdirs>=1.4.3
    fasta-reader>=0.0.9
    hmmer-reader>=0.0.9
    pytest>=5.3.5

[aliases]
test = pytest

[tool:pytest]
addopts =
    --doctest-modules
    --ignore="setup.py"
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS ALLOW_UNICODE
norecursedirs = .eggs .git *.egg-info build .ropeproject .undodir profmark
pep8ignore = E402 W0212 W0622 R0915 E743

[pylint]
disable = redefined-builtin,R0915,line-too-long

[flake8]
ignore = E501 E741 E203 W503 W0212 W0622 R0915 E743
