[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Python interface for HMMER software
download_url = https://github.com/EBI-Metagenomics/hmmer-py
keywords = hmmer, dna, protein
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = hmmer
url = https://github.com/EBI-Metagenomics/hmmer-py

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    fasta-reader>=0.0.12
    pooch>=1.2.0
    pytest>=5.3.5

[aliases]
test = pytest

[tool:pytest]
addopts =
    --doctest-modules
    --ignore="setup.py"
norecursedirs = .eggs .git *.egg-info build .ropeproject .undodir

[pylint]
disable = redefined-builtin,R0915,line-too-long

[flake8]
ignore = E501 E741 E203 W503 W0212 W0622 R0915 E743
